# ChangeLog for dev-java/jaxme
# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-java/jaxme/ChangeLog,v 1.11 2006/08/07 00:11:55 nichoj Exp $

  07 Aug 2006; Joshua Nichols <nichoj@gentoo.org> jaxme-0.3.1-r2.ebuild:
  Updated depenedencies, so that Java 1.6 won't be used at build time, because
  it causes build errors.

*jaxme-0.3.1-r2 (28 Jul 2006)

  28 Jul 2006; Krzysiek Pawlik <nelchael@gentoo.org> -jaxme-0.3.1-r1.ebuild,
  +jaxme-0.3.1-r2.ebuild:
  Revision bump to apply previous fix.

  28 Jul 2006; Krzysiek Pawlik <nelchael@gentoo.org> jaxme-0.3.1-r1.ebuild:
  Fixed rewriting of build files, see bug #141940.

*jaxme-0.3.1-r1 (27 Jul 2006)

  27 Jul 2006; Krzysiek Pawlik <nelchael@gentoo.org> +jaxme-0.3.1-r1.ebuild:
  Migrated to Generation 2.

  11 Mar 2006; Michael Hanselmann <hansmi@gentoo.org> jaxme-0.3.1.ebuild:
  Stable on ppc.

  23 Jan 2006; Joshua Nichols <nichoj@gentoo.org> jaxme-0.3.1.ebuild:
  Stable on amd64.

  11 Dec 2005; Joshua Nichols <nichoj@gentoo.org> jaxme-0.3.1.ebuild:
  Fixed xerces dependency (bug #115158).

  26 Sep 2005; Thomas Matthijs <axxo@gentoo.org> jaxme-0.3.1.ebuild:
  keyword x86

  16 Sep 2005; Gustavo Felisberto <humpback@gentoo.org>; jaxme-0.3.1.ebuild:
  Keyword ~amd64 bug #105520

  01 Jul 2005; David Holm <dholm@gentoo.org> jaxme-0.3.1.ebuild:
  Added to ~ppc.

*jaxme-0.3.1 (29 Jun 2005)

  29 Jun 2005; Thomas Matthijs <axxo@gentoo.org>
  +files/jaxme-0.3.1-gentoo.patch, +metadata.xml, +jaxme-0.3.1.ebuild:
  new packages, dep of dom4j, ebuild contributed by Josh Nichols
  <nichoj@alum.rpi.edu>
