@@ -1,20 +1,23 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA1
+
 AUX jaxme-0.3.1-gentoo.patch 1771 RMD160 2c4d51b162bb87599e7c50b28bfd99dee37e5d96 SHA1 b5bc9691a0ba611e2f46b5bf854442b016cd0e2d SHA256 833974df6973940936e74919c9629bc17138805bf4dd54d53916334bb01c91fa
 MD5 8039a2f19bcc273d417ec48d00bbe87a files/jaxme-0.3.1-gentoo.patch 1771
 RMD160 2c4d51b162bb87599e7c50b28bfd99dee37e5d96 files/jaxme-0.3.1-gentoo.patch 1771
 SHA256 833974df6973940936e74919c9629bc17138805bf4dd54d53916334bb01c91fa files/jaxme-0.3.1-gentoo.patch 1771
 DIST ws-jaxme-0.3.1-src.tar.gz 3058903 RMD160 cd994b5fd9a15473ed7390b8911601b794f76cd0 SHA1 4ba5fd76cbda407c0b32af2e3235dab66a8b0a00 SHA256 9f02b233849ec10cda455c51d5bda46929f5fcbed237c5a5a760a19eb59e852c
-EBUILD jaxme-0.3.1-r2.ebuild 1944 RMD160 3a69ac0314bc219154c4111ffec424f05e8d5735 SHA1 3657a92ab83391113c546e64c84d069a228c284d SHA256 b015277a70c5ea7196e7270ca7f34b0ae330c3320d9c99b3d1000fb6624e1496
-MD5 29553389df295edda4186b5b5929e1ae jaxme-0.3.1-r2.ebuild 1944
-RMD160 3a69ac0314bc219154c4111ffec424f05e8d5735 jaxme-0.3.1-r2.ebuild 1944
-SHA256 b015277a70c5ea7196e7270ca7f34b0ae330c3320d9c99b3d1000fb6624e1496 jaxme-0.3.1-r2.ebuild 1944
+EBUILD jaxme-0.3.1-r2.ebuild 2013 RMD160 f10174c0d47fc3deabd43a298e733929d873712d SHA1 e61e58a3f2896f65ce8cd516bdfb6c39b2488721 SHA256 9f1a1af2c5304fb0536ba48f072c6e46531a13112d65962ba5e11df1a6e0adbd
+MD5 afe5ba0f4c77847636619288761e5cf7 jaxme-0.3.1-r2.ebuild 2013
+RMD160 f10174c0d47fc3deabd43a298e733929d873712d jaxme-0.3.1-r2.ebuild 2013
+SHA256 9f1a1af2c5304fb0536ba48f072c6e46531a13112d65962ba5e11df1a6e0adbd jaxme-0.3.1-r2.ebuild 2013
 EBUILD jaxme-0.3.1.ebuild 1634 RMD160 a8c5130d275fc4345f73f5f7a7789561ff5d9acb SHA1 0e037a3253b304c6dec03b93ad9d0d1565a7fd5e SHA256 3d889735b474f7d07a1b5f0495ef12fdcdc924c4856c08a3211de587fd08dff4
 MD5 dd79eeaa71196821af81c46194d397bf jaxme-0.3.1.ebuild 1634
 RMD160 a8c5130d275fc4345f73f5f7a7789561ff5d9acb jaxme-0.3.1.ebuild 1634
 SHA256 3d889735b474f7d07a1b5f0495ef12fdcdc924c4856c08a3211de587fd08dff4 jaxme-0.3.1.ebuild 1634
-MISC ChangeLog 1626 RMD160 b8b0ba0813345f7b7b11a707c7ffbf2b3ea520ce SHA1 43373aaf819dfb5b388623044f37501b75f1c2a0 SHA256 364b5f98cc75b7c24787a53f5b18c935d9e10481d52bf8f2737e8c7829da0fbe
-MD5 7db7f3e148d58e2dac9c98a466660486 ChangeLog 1626
-RMD160 b8b0ba0813345f7b7b11a707c7ffbf2b3ea520ce ChangeLog 1626
-SHA256 364b5f98cc75b7c24787a53f5b18c935d9e10481d52bf8f2737e8c7829da0fbe ChangeLog 1626
+MISC ChangeLog 1748 RMD160 1b2c84284a8ff3f8cbfdf79cb0b6210039572eba SHA1 a681ac089d21c7a986a43c9ce73f1e9b446ede77 SHA256 6c558b7a1ae76242149f85d554caa469ed4ea2a9b4e956b2ecfe133f7138d0ad
+MD5 c2795c009102a6d30b04f4a82392f35a ChangeLog 1748
+RMD160 1b2c84284a8ff3f8cbfdf79cb0b6210039572eba ChangeLog 1748
+SHA256 6c558b7a1ae76242149f85d554caa469ed4ea2a9b4e956b2ecfe133f7138d0ad ChangeLog 1748
 MISC metadata.xml 158 RMD160 493079b5fb71d66863beea1b023901c90ba81be5 SHA1 77cd509a8b3c377b9a24480b48a5d5481b7874f1 SHA256 ea882ceccfd160b16cf7e79de423bdcc12b3fa000f124491a6df36f5783894fb
 MD5 123cf9440c1d4ac78f2caba1624765f9 metadata.xml 158
 RMD160 493079b5fb71d66863beea1b023901c90ba81be5 metadata.xml 158
@@ -25,3 +28,10 @@ SHA256 0f7eb759824895c7f8af0a9f3e9f270b9849fb68689cc8f0b3eda15670eb8a5b files/di
 MD5 180aace1ee8992c766d8f39693fd74e1 files/digest-jaxme-0.3.1-r2 259
 RMD160 e549ab8391bb8016eec864b90f26967e95affc95 files/digest-jaxme-0.3.1-r2 259
 SHA256 0f7eb759824895c7f8af0a9f3e9f270b9849fb68689cc8f0b3eda15670eb8a5b files/digest-jaxme-0.3.1-r2 259
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v1.4.5 (GNU/Linux)
+
+iD8DBQFFAmQOcxLzpIGCsLQRAg8/AKCZwhc67FwqDARBErnCdZhy9d9BCwCfbEL0
+fXWisAc+WIk/Z96yTixGGGQ=
+=SzMv
+-----END PGP SIGNATURE-----
