@@ -1,6 +1,9 @@
 # ChangeLog for dev-java/jaxme
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-java/jaxme/ChangeLog,v 1.11 2006/08/07 00:11:55 nichoj Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-java/jaxme/ChangeLog,v 1.12 2006/09/09 06:49:40 betelgeuse Exp $
+
+  09 Sep 2006; Petteri Räty <betelgeuse@gentoo.org> jaxme-0.3.1-r2.ebuild:
+  Fixed to compile with JAVA_PKG_STRICT.
 
   07 Aug 2006; Joshua Nichols <nichoj@gentoo.org> jaxme-0.3.1-r2.ebuild:
   Updated depenedencies, so that Java 1.6 won't be used at build time, because
